syntax = "proto3";

package test_db_encryption;

message SetKMEnclaveRequest {
    string mrenclave = 1;
}

message SetKMEnclaveResponse {
}

message StoreEncryptedRequest {
    string key = 1;
    string value = 2;
}

message StoreEncryptedResponse {
    bool ok = 1;
}

message FetchEncryptedRequest {
    string key = 1;
}

message FetchEncryptedResponse {
    bool ok = 1;
    string value = 2;
}
